<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="284dp"
        android:layout_height="306dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/menu_textview"
            android:textAlignment="center"
            android:textSize="35dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txvWellIndex"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00ACC1"
            android:gravity="center_vertical"
            android:text="@string/well_index_textview"
            android:textColor="#F9F9F9"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txvWellOwner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#039BE5"
            android:gravity="center_vertical"
            android:text="@string/well_owners_textview"
            android:textColor="#F9F9F9"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txvDrillerIndex"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#1E88E5"
            android:gravity="center_vertical"
            android:text="@string/driller_index_textview"
            android:textColor="#F9F9F9"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txvNavigation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#3949AB"
            android:gravity="center_vertical"
            android:text="@string/navigation_textview"
            android:textColor="#F9F9F9"
            android:textSize="25dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>